# config_to_order

./: README.md  pyproject.toml
config_to_order/: __init__.py  hooks.py  utils.py
config_to_order.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
config_to_order/api/: variant_configuration.py
config_to_order/config_to_order/doctype/configuration_constraint/: configuration_constraint.json  configuration_constraint.py
config_to_order/config_to_order/doctype/configuration_result/: configuration_result.json
config_to_order/config_to_order/doctype/configuration_result_item/: configuration_result_item.json
config_to_order/doc_events/: configuration.py  serial_and_batch_bundle.py
config_to_order/fixtures/: custom_field.json
config_to_order/public/js/: index.js
config_to_order/public/js/scripts/: configuration_constraint.js  configuration_item.js  index.js  quotation_item.js  sales_order_item.js
config_to_order/tests/: test_configuration_constraint.py  test_configuration_docname.py  test_configuration_snapshot.py  test_nested_configuration.py  test_price_formula.py  test_serial_no_linkage.py  test_utils.py  test_variant_configuration.py
docs/: setup.ar.md  setup.md  user-guide.ar.md  user-guide.md
docs/diagrams/: runtime-flow.mmd  setup-time.mmd
